Complete Site Header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <!-- Site Header -->
     <header>
-
+        <div class="box-logo">
+            <img class="logo" src="./img/Logo.png" alt="Logo Boolean">
+            <span class="logo-text">
+                Toboolist
+            </span>
+        </div>    
     </header>
     <!-- /Site Header -->
 
