Complete Button bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <main>
         <!-- Button bar -->
         <section>
-
+            <div class="button-bar">
+                <a href="#" class="button select">Add Task</a>
+                <a href="#" class="button unselect">Add Section</a>
+            </div>
         </section>
         <!-- /Button bar -->
 
