Complete site Main

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Button bar -->
         <section>
             <div class="button-bar">
-                <a href="#" class="button select">Add Task</a>
+                <a href="#" class="button select ml-60">Add Task</a>
                 <a href="#" class="button unselect">Add Section</a>
             </div>
         </section>
@@ -32,7 +32,20 @@
 
         <!-- Task list -->
         <section>
+            <h2 class="ml-60">New Task</h2>
+            <div class="task check label-editorial ml-60">Quarterly Newsletter</div>
 
+            <h2 class="ml-60">Today</h2>
+            <div class="task check label-editorial ml-60">Recruiting blog post</div>
+            <div class="task check label-goals ml-60">Mobile app luaunch</div>
+            <div class="task cross label-recruiting ml-60">Interview John H.</div>
+            <div class="task check label-mobile ml-60">Summit update to mobile storefronts</div>
+
+            <h2 class="ml-60">Upcoming</h2>
+            <div class="task cross ml-60">Schedule meeting with Alex</div>
+            <div class="task check label-website ml-60">Homepage refresh</div>
+            <div class="task check label-sales ml-60">onboard new Sales team members</div>
+            <div class="task check label-editorial ml-60">Review editorial calendar</div>
         </section>
         <!-- /Task list -->
     </main>
